--- a/src/Componets/Header/header.css
+++ b/src/Componets/Header/header.css
@@ -50,9 +50,12 @@ button:hover {
 }
 
 .srch{
-    margin-top: 200px;
+    margin-top: 250px;
     display: flex;
     justify-content: center;
+}
+.srch .inp{
+    width: 500px !important;
 }
 .iconCard{
     margin-top: 250px;
@@ -70,5 +73,116 @@ button:hover {
     }
     100%{
         top: 30px;
+    }
+}
+@media (max-width:1300px) {
+    .head {
+        width: 100%;
+        height: 100vh;
+        background-position: center !important;
+    
+    }
+    .twice {
+        width: 100%;
+        height: 70vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
+    }
+    .srch{
+        margin-top: 200px !important;
+        display: flex;
+        justify-content: center;
+    }
+    .srch .inp{
+        width: 500px !important;
+        height: 40px;
+    }
+    button{
+        height: 40px;
+    }
+    .iconCard{
+        margin-top: 150px;
+        position: relative;
+    
+    }
+}
+@media (max-width:1100px) {
+    .head {
+        width: 100%;
+        height: 70vh;
+        background-position: center !important;
+    
+    }
+    .twice {
+        width: 100%;
+        height: 70vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
+    }
+    .srch{
+        margin-top: 100px !important;
+        display: flex;
+        justify-content: center;
+    }
+    .srch .inp{
+        width: 500px !important;
+        height: 40px;
+    }
+    button{
+        height: 40px;
+    }
+    .iconCard{
+        margin-top: 70px;
+        position: relative;
+    
+    }
+}
+
+@media (max-width:769px) {
+    .head {
+        width: 100%;
+        height: 70vh;
+        background-position: center !important;
+    
+    }
+    .twice {
+        width: 100%;
+        height: 70vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) !important;
+    }
+    .srch{
+        margin-top: 100px !important;
+        display: flex;
+        justify-content: center;
+    }
+    .srch .inp{
+        width: 300px !important;
+        height: 40px;
+    }
+    button{
+        height: 40px;
+    }
+    .iconCard{
+        margin-top: 50px;
+        position: relative;
+    
+    }
+}
+@media (max-width:450px) {
+    .srch{
+        margin-top: 100px !important;
+        display: flex;
+        justify-content: center;
+    }
+    .srch .inp{
+        width: 200px !important;
+        height: 35px;
+    }
+    button{
+        width: 50px;
+        height: 35px;
+    }
+    .iconCard{
+        margin-top: 50px;
+        position: relative;
+    
     }
 }
